Documentation edits made through Mintlify web editor

--- a/api-reference.mdx
+++ b/api-reference.mdx
@@ -3,4 +3,10 @@ title: "New file"
 description: "Description of your new file."
 ---
 
-## title: "API Reference" openapi: "openapi.yaml"
+---
+
+title: "API Reference"
+
+openapi: "openapi.yaml"
+
+---
