Documentation edits made through Mintlify web editor

--- a/docs/api-reference.mdx
+++ b/docs/api-reference.mdx
@@ -1,10 +1,12 @@
 ---
-title: "New file"
+title: "API Reference"
 description: "Description of your new file."
 ---
 
-title: "API Reference"
+Welcome to the B2B Sales Signals API.
 
-openapi: "openapi.yaml"
+Below you’ll find all available endpoints.  
 
----
+You can try them out directly in the browser.
+
+\<API /\>
